[Enhancement] Faster PK table compaction transaction publish & apply strategy
Signed-off-by: luohaha <18810541851@163.com>

--- a/be/src/storage/CMakeLists.txt
+++ b/be/src/storage/CMakeLists.txt
@@ -241,6 +241,7 @@ add_library(Storage STATIC
     lake/local_pk_index_manager.cpp
     primary_key_dump.cpp
     dictionary_cache_manager.cpp
+    compaction_delvec_reader.cpp
     inverted/index_descriptor.hpp
     inverted/inverted_index_iterator.cpp
     inverted/inverted_index_iterator.cpp
