--- a/be/test/CMakeLists.txt
+++ b/be/test/CMakeLists.txt
@@ -437,6 +437,8 @@ set(EXEC_FILES
         ./storage/lake/lake_persistent_index_test.cpp
         ./storage/lake/replication_txn_manager_test.cpp
         ./storage/lake/persistent_index_sstable_test.cpp
+        ./storage/rows_mapper_test.cpp
+        ./storage/sstable/persistent_index_sstable_test.cpp
         )
 
 if ("${WITH_STARCACHE}" STREQUAL "ON" OR "${WITH_CACHELIB}" STREQUAL "ON")
